# cvextract

./: .bumpversion.cfg  .gitignore  ARCHITECTURE_REFACTORING.md  CODE_OF_CONDUCT.md  COVERAGE_INSTRUCTIONS.md  DONATIONS.md  FUNDING.yml  README.md  SUPPORT.md  __init__.py  body_parser.py  core.py  coverage.json  coverage.xml  cv_schema.json  cvextract.py  cvextract.spec  docx_utils.py  logging_utils.py  pipeline.py  pipeline_highlevel.py  pyproject.toml  render.py  research_schema.json  resume_extract.py  shared.py  sidebar_parser.py
.github/: CONTRIBUTING.md  FUNDING.yml  copilot-instructions.md
cvextract/: __init__.py  body_parser.py  cli.py  cli_config.py  cli_execute.py  cli_execute_adjust.py  cli_execute_extract.py  cli_execute_parallel.py  cli_execute_pipeline.py  cli_execute_render.py  cli_execute_single.py  cli_gather.py  cli_parallel.py  cli_prepare.py  cli_step_adjust.py  cli_step_extract.py  cli_step_render.py  customer_adjust.py  logging_utils.py  output_controller.py  pipeline.py  pipeline.py,cover  pipeline_apply.py  pipeline_extract.py  pipeline_extract_apply.py  pipeline_helpers.py  pipeline_highlevel.py  render.py  run_input.py  shared.py  sidebar_parser.py  verification.py
cvextract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
specs/: FEATURES.md  FEATURE_REQUEST_EXAMPLE.md  ORIGINAL_FEATURE_REQUEST.md
tests/: conftest.py  test_adjusters.py  test_body_parser.py  test_build_system_prompt.py  test_cli.py  test_cli_adjust_skip_compare.py  test_cli_execute.py  test_cli_execute_adjust_coverage.py  test_cli_execute_extract.py  test_cli_execute_parallel.py  test_cli_execute_render_coverage.py  test_cli_execute_single_coverage.py  test_cli_gather.py  (+49 more)
(+107 files in other folders)
