[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "lxml",
  "docxtpl",
  "requests",
  "openai",
]
name = "cvextract"
version = "0.6.1"

[tool.setuptools.packages.find]
where = ["."]
include = ["cvextract*"]

[tool.setuptools.package-data]
cvextract = [
  "contracts/*.json",
  "**/prompts/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/tests/*"]